# Atividade_Hill_Climbing

./: README.md  Stochastic_Hill_Climbing.py  boxplot.ipynb  comparacao_log.txt  estatisticas_comparacao.txt  estatisticas_knapsack.txt  experimentos_comparacao.py  experimentos_knapsack.py  experimentos_log.txt  fitness_comparacao.csv  fitness_values.csv  hill_climbing.py  knapsack.py  requirements.txt  resultados_finais.txt  resultados_finais2.txt  sphere.py
knapsack-ga-python/: README.md  pyproject.toml
knapsack-ga-python/configs/: default.yaml
knapsack-ga-python/scripts/: run_experiments.sh
knapsack-ga-python/src/: main.py
knapsack-ga-python/src/experiments/: run_instances.py
knapsack-ga-python/src/ga/: core.py  crossover.py  mutation.py  mutations.py  population.py  selection.py  utils.py
knapsack-ga-python/src/problems/: knapsack.py
knapsack-ga-python/tests/: test_ga_core.py  test_knapsack.py
tmp_results/: results_one_point.csv  results_two_point.csv  results_uniform.csv
